# joyofenergy

./: .pre-commit-config.yaml  README.md  app.py  pyproject.toml
.ci/: Dockerfile
.github/workflows/: build.pipeline.yaml
src/: app_initializer.py  main.py
src/controller/: electricity_reading_controller.py  models.py  price_plan_comparator_controller.py
src/generator/: electricity_reading_generator.py
src/service/: electricity_reading_service.py  price_plan_service.py
tests/controller/: test_pricePlanComparatorController.py
tests/service/: test_PricePlanService.py
