[tool.poetry]
name = "joyofenergy"
version = "0.1.3"
description = ""
authors = ["Baran Demir <social@bdemir.de>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
loguru = "^0.7.2"
httpx = "^0.27.0"

[tool.poetry.group.tests]
optional = true
[tool.poetry.group.tests.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.ci]
optional = true
[tool.poetry.group.ci.dependencies]
ruff = "^0.3.0"
commitizen = "^3.16.0"
black = "^24.2.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.select = ["I00", "E", "F", "W"]

[tool.commitizen]
version = "0.1.3"
tag_format = "$version"
version_files = [
    "pyproject.toml:version"
]
